# data_mining_project

./: build_linux.sh  how to build.txt
knn_python/: knn.py  main.py  tests.py  tools.py
knn_python/Data/: test.data
knn_rust/: Cargo.toml
knn_rust/src/: lib.rs
