[package]
name = "knn_rust"
version = "0.1.0"
authors = ["NilsHasNoGithub <niolopa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
python-module = ["pyo3"] # requires to be built with nightly


[lib]
name = "knn_rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
optional = true
version = "0.8.5"
features = ["extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]